--- a/training.ipynb
+++ b/training.ipynb
@@ -28,7 +28,7 @@
       "source": [
         "!pip install -r requirements.txt"
       ],
-      "execution_count": 1306,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": 1307,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "train=pd.read_csv('train.csv')\n",
         "test=pd.read_csv('test.csv')"
       ],
-      "execution_count": 1308,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "#Show Preview Dataset\n",
         "train"
       ],
-      "execution_count": 1309,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
         "#Show Preview Dataset\n",
         "test"
       ],
-      "execution_count": 1310,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
         "test=test.drop(axis=1, columns='CustomerId')\n",
         "test=test.drop(axis=1, columns='Surname')"
       ],
-      "execution_count": 1311,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -666,7 +666,7 @@
         "missing_values_count = train.isnull().sum()\n",
         "missing_values_count"
       ],
-      "execution_count": 1312,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +707,7 @@
         "missing_values_count = test.isnull().sum()\n",
         "missing_values_count"
       ],
-      "execution_count": 1313,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,7 +746,7 @@
       "source": [
         "train.info()"
       ],
-      "execution_count": 1314,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +788,7 @@
         "#See Details of Datatset\n",
         "train.describe()"
       ],
-      "execution_count": 1315,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +964,7 @@
         "sns.countplot(x = \"IsActiveMember\", hue=\"Exited\", data = train, ax = ax[2])\n",
         "plt.show()"
       ],
-      "execution_count": 1316,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -987,10 +987,10 @@
       },
       "source": [
         "#Da questi grafici notiamo che i clienti con 3-4 Prodotti hanno percentuali molto alte di uscire, \n",
-        "#Notiamo anche che i membri che non sono attivi hanno più probabilità di uscire rispetto agli altri, \n",
+        "#Notiamo anche che i membri che non sono attivi hanno più probabilità di uscire rispetto a quelli meno attivi, \n",
         "#Mentre per quanto riguarda i possessori di carte di credito non notiamo particolari corrispondenze"
       ],
-      "execution_count": 1317,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
         "sns.countplot(x='Geography', hue = 'Exited',data = train)\n",
         "plt.show()"
       ],
-      "execution_count": 1318,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1030,9 +1030,9 @@
         "id": "K31YWBc4aWGx"
       },
       "source": [
-        "#Da questo grafico notiamo la Germania ha percentuali più alte di Exited"
+        "#Da questo grafico notiamo che la Germania ha percentuali più alte di Exited"
       ],
-      "execution_count": 1319,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1045,11 +1045,11 @@
         "outputId": "24d03b7f-80c1-4432-d4a8-b24b655c0b82"
       },
       "source": [
-        "# Percentage per category for the target column.\n",
+        "#Distribuzione exited\n",
         "percentage_labels = train['Exited'].value_counts(normalize = True) * 100\n",
         "percentage_labels"
       ],
-      "execution_count": 1320,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
         "#Da questa percentuale notiamo quindi che abbiamo molte meno informazioni sui clienti Exited quindi essendoci meno informazioni sui clienti che escono \n",
         "#sarà più facile commettere errori nella previsione di questi ultimi "
       ],
-      "execution_count": 1321,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1094,7 +1094,7 @@
         "sns.displot(data=train, x=\"EstimatedSalary\", hue=\"Exited\",  height=6, aspect=1.5, kde = True)\n",
         "plt.show()"
       ],
-      "execution_count": 1322,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1125,7 +1125,7 @@
         "train['EstimatedSalaryBand'] = pd.cut(train['EstimatedSalary'], 10)\n",
         "train[['EstimatedSalaryBand', 'Exited']].groupby(['EstimatedSalaryBand'], as_index=False).mean().sort_values(by='EstimatedSalaryBand', ascending=True)"
       ],
-      "execution_count": 1323,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,6 +1239,7 @@
         "outputId": "eadbada1-c156-4256-fa81-a4714f65c67a"
       },
       "source": [
+        "#Suddivido in 10 fasce la feature EstimatedSalary\n",
         "train.loc[train['EstimatedSalary'] <= 20071.995, 'EstimatedSalary'] = 0\n",
         "train.loc[(train['EstimatedSalary'] > 20071.995) & (train['EstimatedSalary'] <= 40053.92), 'EstimatedSalary'] = 1\n",
         "train.loc[(train['EstimatedSalary'] > 40053.92) & (train['EstimatedSalary'] <= 60035.845), 'EstimatedSalary'] = 2\n",
@@ -1263,10 +1264,10 @@
         "test.loc[(test['EstimatedSalary'] > 179927.395) & (test['EstimatedSalary'] <= 199909.32), 'EstimatedSalary'] = 9\n",
         "\n",
         "train = train = train.drop(\"EstimatedSalaryBand\", axis = 1)\n",
-        "#verifichiamo\n",
+        "#Verifica\n",
         "train.EstimatedSalary.unique()"
       ],
-      "execution_count": 1324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1296,7 +1297,7 @@
         "sns.displot(data=train, x=\"Balance\", hue=\"Exited\",  height=6, aspect=1.5, kde = True)\n",
         "plt.show()"
       ],
-      "execution_count": 1325,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1323,11 +1324,11 @@
         "outputId": "b3a358ff-5a71-4d8e-91c2-e4415c9dfd25"
       },
       "source": [
-        "#Divide Salary in band\n",
+        "#Divide Balance in band\n",
         "train['BalanceBand'] = pd.cut(train['Balance'], 10)\n",
         "train[['BalanceBand', 'Exited']].groupby(['BalanceBand'], as_index=False).mean().sort_values(by='BalanceBand', ascending=True)"
       ],
-      "execution_count": 1326,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,6 +1442,7 @@
         "outputId": "9d81d499-333c-4592-d8b3-9481e56432ad"
       },
       "source": [
+        "#Suddivido in 10 fasce la feature Balance \n",
         "train.loc[train['Balance'] <= 25089.809, 'Balance'] = 0\n",
         "train.loc[(train['Balance'] > 25089.809) & (train['Balance'] <= 50179.618), 'Balance'] = 1\n",
         "train.loc[(train['Balance'] > 50179.618) & (train['Balance'] <=  75269.427), 'Balance'] = 2\n",
@@ -1465,10 +1467,10 @@
         "test.loc[(test['Balance'] > 225808.281) & (test['Balance'] <= 250898.09), 'Balance'] = 9\n",
         "\n",
         "train = train = train.drop(\"BalanceBand\", axis = 1)\n",
-        "#verifichiamo\n",
+        "#Verifica\n",
         "train.Balance.unique()"
       ],
-      "execution_count": 1327,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,14 +1492,14 @@
         "id": "QhS5yxy5k1x5"
       },
       "source": [
-        "#Encoding\n",
+        "#Encoding for not numeric feature\n",
         "le = preprocessing.LabelEncoder()\n",
         "for l in train:\n",
         "  if ((l=='Geography')|(l=='Gender')):\n",
         "    train[l]=le.fit_transform(train[l].astype(str))\n",
         "    test[l]=le.fit_transform(test[l].astype(str))\n"
       ],
-      "execution_count": 1328,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1518,7 +1520,7 @@
         "plt.title('Correlazione tra features')\n",
         "plt.show()"
       ],
-      "execution_count": 1329,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1541,10 +1543,10 @@
       },
       "source": [
         "#Dal grafico della correlazione possiamo notare che ci sono molte features con bassissima correlazione con Exited, tra cui Estimated Salary(nonostante il raggruppamento) e HasCrCard\n",
-        "#ma nonostante questo dopo varie prove dato l'utilizzo del Random Forest Classifier i valori di accuracy risultavano più alti nel caso in cui venivano lasciate, rispetto a dropparle\n",
+        "#ma nonostante questo dopo varie prove del Random Forest Classifier i valori di accuracy risultavano più alti nel caso in cui venivano lasciate, rispetto a dropparle\n",
         "#quindi decido di lasciarle, inoltre qui notiamo come l'età sia il valore che ha una maggiore correlazione con Exited"
       ],
-      "execution_count": 1330,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1559,7 +1561,7 @@
         "trainX=train.drop('Exited', axis=1)\n",
         "testX=test.drop('Exited', axis=1)"
       ],
-      "execution_count": 1331,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1572,13 +1574,13 @@
         "outputId": "4403ad74-244a-4aa9-e4da-8eb1787a6ef5"
       },
       "source": [
-        "#Model training and score(Modello non spiegato a lezione, è un classificatore d'insieme che si ottiene dall'aggregazione di alberi di decisione infatti come si può notare ha una precisione più alta rispetto al semplice Decision Tree)\n",
+        "#Model training and score(Modello non spiegato a lezione, è un classificatore d'insieme che si ottiene dall'aggregazione di alberi di decisione)\n",
         "forest = RandomForestClassifier()\n",
         "forest.fit(trainX, trainY)\n",
         "prediction = forest.predict(testX)\n",
         "print('Accuracy:',(accuracy_score(testY, prediction)* 100), \"%\")"
       ],
-      "execution_count": 1332,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,7 +1611,7 @@
         "plt.ylabel('Actual label')\n",
         "plt.xlabel('Predicted label')"
       ],
-      "execution_count": 1333,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1643,9 +1645,9 @@
         "id": "7q6RXfqm6QAD"
       },
       "source": [
-        "#Come ho annunciato in precedentemente abbiamo che principalmente gli errori sono stati compiuti per indovinare i clienti 'Exited' poichp i dati sono molto pochi su di essi "
+        "#Come annunciato precedentemente dalla confusion matrix notiamo che gli errori sono stati compiuti per predire i clienti 'Exited' poiché i dati sono molto pochi su di essi (20%) rispetto a quelli che restano"
       ],
-      "execution_count": 1334,
+      "execution_count": null,
       "outputs": []
     }
   ]
